--- a/vans.css
+++ b/vans.css
@@ -182,6 +182,8 @@ color: black;
 text-transform: uppercase;
 }
 
+
+/* the carousel items */
 .img-fluid{
 width: 90%;
 height: 250px;
@@ -198,6 +200,112 @@ padding-top: 3px;
 }
 
 
+/* the footer sector */
+footer{
+  background-color: black;
+ font-family: 'Oswald', sans-serif;
+ letter-spacing: 1px;
+ padding-right: 5rem;
+
+}
+
+footer a{
+  font-family:sans-serif;
+  color: white;
+}
+
+footer a:hover{
+color: brown;
+}
+
+footer h5{
+  text-transform: uppercase;
+}
+
+.below p{
+  text-align: center;
+  font-family:sans-serif;
+}
+
+.below button{
+  width: 113%;
+  height: 60px;
+  margin: 0;
+  border-radius: 0;
+  background-color: rgb(219, 43, 43);
+}
+
+.iconz{
+  background-color: white;
+  font-size: 25px;
+  padding: 10px;
+  align-items: center;
+  color: black;
+  margin: 5px; 
+}
+
+.twitter:hover{
+  background-color:lightskyblue ;
+}
+
+.ig:hover{
+  background-color: purple;
+}
+
+.pinterest:hover{
+background-color: red;
+}
+
+.yt:hover{
+background-color: rgb(176, 19, 19);
+}
+
+.facebook:hover{
+background-color: rgb(45, 45, 187);
+}
+
+   
+.countries{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family:sans-serif;
+  border-radius:0;
+ 
+}
+.countries form{
+  font-size: 13px;
+}
+
+
+.footer-logo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+ 
+}
+
+.footer-logo a{
+  text-transform: underline;
+  display: inline;
+  font-family: sans-serif;
+  font-size: 13px;
+}
+
+.footer-logo p{
+  display: inline;
+  font-family: sans-serif;
+  font-size: 13px;
+}
+
+.footer-logo a:hover{
+  color: white;
+}
+
+
 
 
 
@@ -208,6 +316,10 @@ padding-top: 3px;
 
 
 @media (max-width: 576px) {
+
+  body{
+    margin: 0;
+  }
     .navyy, .shop, p{
         height: 4rem;
         font-size: 11px;
@@ -233,5 +345,47 @@ padding-top: 3px;
     color: black;
 
 }
+
+/* the carousel items */
+.img-fluid{
+  width: 100%;
+  height: 200px;
+  border: 0;
+  border-color:none ;
+  }
+
+  /* footer section */
+  .below button{
+    width: 118%;
+    height: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 0;
+    border-radius: 0;
+    background-color: rgb(219, 43, 43);
+  }
+  
+  .iconz{
+    background-color: white;
+    font-size: 20px;
+    padding: 10px;
+    align-items: center;
+    color: black;
+    margin: 5px; 
+    
+  }
+
+  .footer-logo a{
+    text-transform: underline;
+    display: inline;
+    font-family: sans-serif;
+    font-size: 13px;
+  }
+  
+  .footer-logo p{
+    display: inline;
+    font-family: sans-serif;
+    font-size: 13px;
+  }
 
 }
