--- a/vans.css
+++ b/vans.css
@@ -60,13 +60,21 @@ background-color: white;
   text-decoration: none;
   color: black;
 }
-
+.sidee{
+  color: black;
+  padding-right: 12px;
+  padding-left: 12px;
+  font-size: 17px;
+  position: relative;
+  top:1.1rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 900;
+}
   /* search icon container*/
 .input-group-text{
 border-right: none;
 background-color: white;
 height:35px;
-
 width: 50px;
 border-radius: 17px;
 }
@@ -86,17 +94,13 @@ border-top-left-radius: 0;
 /* search text input thing */
 .search-input {
 max-width: 200px;
-
 font-size:15px;
 font-weight: 400;
 height:35px;
 border-left: none;
 border-right: none;
 border-radius: 17px;
-
-
 }
-
 
 /* search icon itself */
 .bi-search, .bi-qr-code-scan{
@@ -105,8 +109,6 @@ padding-right: 10px;
 color: darkgrey;
 
 }
-
-
 
 /*  icon on the collapsing navbar */
 .icyy{
@@ -166,21 +168,6 @@ background-color: white;
 
 }
 
-.oval {
-letter-spacing: 2px;
-width: 120px;
-height: 50px;
-background-color: white;
-border: 2px solid black;
-border-radius: 50% / 70%;
-display: flex;
-font-family: 'Oswald', sans-serif;
-justify-content: center;
-align-items: center;
-font-size: 15px;
-color: black;
-text-transform: uppercase;
-}
 
 
 /* the carousel items */
