changes were made

--- a/vans.css
+++ b/vans.css
@@ -113,11 +113,18 @@ color: black;
 
 
 /*  icon on the collapsing navbar */
-.icyy-sm, .bi-list{
+.icyy-sm{
   color: black;
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 22px;
+
+}
+
+.bi-list{
+  margin-left:5rem;
+  font-size: 25px;
+  color: black;
 }
 .icons{
   margin-left:13rem;
